Polishing
- simplified CanonicalTrade model
- PlatformTrade model timestamp data structure switch
- added unit tests for TradeTransformer utility class
- fixed a handful of bugs